@@ -1,13 +1,17 @@
 AUX pm-blacklist.0 354 SHA256 0b2ca4b40e26a20db9e04909efcd3b1f3f18ca09f018f9e4646eafa5973e2f48 SHA512 e4e02f3e1b1b93ae94c2e4bbad1e8449ab929e9f41a489315df1e79c8888500928ebcd138d87f2fb0bcaa90a6acb40c6c3df418e576894039c11298f106032de WHIRLPOOL a390eef0bb88329788720bde971cbd0bb6b5f1bc2d066165a9ca01bc7ae017ff7226f432f7c948b7ee2ff33db8b1561aefe65afd82c6a517265b90361cb3815a
 AUX tlp-init.openrc 499 SHA256 432428177e4ef4de32120e4b465313bab25e7722d9afcfb36a86b0f6ca218680 SHA512 213dc8ddd0bfd424700e179d5d22aae1832a623e220dcee9f7d38481f12ef36fe315b1273af755a4ff538a404d66d2830db5aa9e48829b8d0aaa7c0c725ba2c0 WHIRLPOOL 7f3e44424442fbf3a4b710a10c52eeda4b0a0963cfb16479213450fc3590132e542e99e45a670fc5dcf73c99a37cfd6aed3af563e2ce9c894dc810863da0c5f0
+AUX tlp-init.openrc-r1 574 SHA256 b4ae03be2e7b88f9595358b30811051c5373c71cbd771ac60fb8671ab8ca1372 SHA512 17008b09bee746d6121e614c14ce1898485d04fef9561f51c2cb60295a3fa09f9b8666dc9b8023f55fb4d9705ca15427599d21f16d8b3c6458d4fc1a207829fe WHIRLPOOL 6a05eb525fecfd75d9b52a5efcae8aa9015c9dbabc767938286e4a75c3b6e07d93dedda006e56f68de94aa1869fcc1c515e92ff8a5b6531ef5e4f6a9991ff28e
 DIST tlp-0.5.tar.gz 56149 SHA256 e535e53c340a1af2ea72f0de8a2ffbfc5f832a4e29c391a4052ab1d783c5c157 SHA512 937f65816722e11d7ccaa667ccb471252d54913f0b29a05d88e266535ff5e157eab86f573a590286647a6b321c923be830603e760a7414bce463faa65cb3fd81 WHIRLPOOL f8b1a7b4e96cd7af8a81ecd17c9389a3ae37d83b16c0b13f890e000837a64edf8962dea073425e34dcf3be9507f2103acea5f7e8ac8cd5331193fc036515880f
 DIST tlp-0.6.tar.gz 58141 SHA256 31d05d249aa83a6e43e94cee9f307f37c59934bbf7a37a87adf05cf74073cfe5 SHA512 fc122079795f7711b3f1546832ac644f17a386185e0b9bd86d16687ac16e33b819aebee9613c83f06b462690f10a3213fe927f8ce2796f7156dd2ced825078e6 WHIRLPOOL fafd0be1bf40991c1cf04e2cc69b5f123ad1dd5e04d19b6f0ceb27b6c8eff9c903f6dd4f435d1420da2bedee587d54abedd9fe29a4285faba4dffeba7e4ab2cb
+DIST tlp-0.7.tar.gz 65106 SHA256 bd313f478f897a658f2ca7db9665b8ce6796431b952f7df9aa80e59072cea4ea SHA512 134f3ff87492240413129b5de98ec295457c4e47560c16e95c08598e28af3737d6de5b1132b3d4ef7c4c9535a33d7ea470982ae921e37190e9a21ed0a13a0446 WHIRLPOOL 423da9fef7052d665744ff43c4e2bca48898222f23af324a5f3b34b757ecec11d67ec2cac71b1001a3cb1b5fada40798a6491ac55fd6faa5ee0c9fcc26e102fa
 DIST tlp-gentoo-additions-0.5.tar.bz2 2494 SHA256 5511afd48173014375f46fdf5652faf3926f789091017f458ff892f307e87018 SHA512 c634c374ed0f552723ae09681cf670d649c75d62097cd72eef8a4bd240f7efeb803f10ab6feedeae81742cbeebd1aef265a1ed917bda6de1bb38cc47ce58c983 WHIRLPOOL 57dfb12c44249fabe836302e48a0ce6b75d9e007ae8d3164cef2b8622ffbffee951b1460aa7bdaed9cbc3f7e85229dce0f1edb72b1c161ec7c939b97d4f3cc71
 DIST tlp-gentoo-patches-0.5-r2.tar.xz 2736 SHA256 8183c08434509ec3a0726dab10a6811334343e0a0631914b804ed0cff5b10560 SHA512 16c3c7cafcefefe44d8f0bb3214bec82239129dfdf2932a268619f2d0e2cfb57f378ed30ac417825879f51c14d6384ebe332aac7a098d55a8741e67b63febb2b WHIRLPOOL 97a1e5fd9ada7ac5e8aa056be10b4699d4057991b626a44bd5cd924137e6b434ead684a189934472be178d99966c5c50af366b24cc3a2d095b954b9b8c276cb1
 DIST tlp-gentoo-patches-0.6.tar.xz 2676 SHA256 da9532945c19d9be7d8b55e4d22fba6101cab2385f591797b3e0a2eca869e9ff SHA512 b9ad6c34781f27e8619af1fa119e2de7034fab415935390e759f127d018a747c16a6da33ffb4a2d1f435874877d454ce1fb22614e90e424a4525943aaf891a4b WHIRLPOOL f665bd0926756b028a5b3d7f6099813dc849fd08e6cfa6401737607a382d0d5a02d87827b93d20fd77f02f4259d77cab9061b0af104780f2c2dfe68f119c7073
-EBUILD tlp-0.5-r2.ebuild 5180 SHA256 28df4bdbe8f5ef985c6bf2e5b218a381e4d366f85a7967ec31aab33cdba721d8 SHA512 327b2834d6ac50aa7ac73158264c43122941a68098fe3b5e069a35c12cb9e8c8ac78823006295ae9b9d404689c2d2c5d01ca773909c28f340930a50e0fae489e WHIRLPOOL 4acf2f387b9b85f3c5becb365d684f355ffeae480a6f78c84a09ac24d096008544590992290e92cd9ad113bfb76feddc5aad72e403cd84ba41a7c7c3450aa71e
-EBUILD tlp-0.5.ebuild 4322 SHA256 8d92d603adaafd810d4b48d7aade4aa678a5e88f6a4eae43e271e1c7ccb6e18f SHA512 9d53e830c792350b44cf6987fb3a9c73fc0de65ebb472357ba6302e01f700e4c5658eefad8ea2e28d68ff52c5896052cb3469b4208371b7b83a7088be1fc17c6 WHIRLPOOL 1bc12403333b32ac19dec7ff0f193779ccab588a8b4d2dd748eec505e2033dddf2ea5e86407745cea7089af4b706d07a1deaca4ac5e7707e50378115ed2d1ad0
-EBUILD tlp-0.6-r1.ebuild 5188 SHA256 3b782e56457456ddb0c2f05b9e7cd14702fa6adf358a10c9a95fab5e67cd5968 SHA512 99479734060ad564bf2d6ebcb6123d62c78dceb29b0732b7629cc48699560c29a59610ba1c455215a32e3d3339d4d4eb6902e1f3bba0a60ea2df5c11d5b3de27 WHIRLPOOL 02f93c81b5172be090eaba43c9fce17adc942260ae5224fc9d10ec46293ffbc3215c0383be4906e525af391d27fe958b9688556b325f73d298039fe4b57df528
-EBUILD tlp-9999.ebuild 6244 SHA256 4f36a12263e3e2a14f9524915e2b79d91bcb010e9fd3dae42defe43ac45e0493 SHA512 65a51553587bb1ed4fad07c73d64364d01278d0fb1bd4ba12a200b0fd4702e1951dc93b12f44567002709db929d32b00796425b028dfabf049c050007cf1b678 WHIRLPOOL 31b2dc59d39a89243eed21acfcd86eaa63a7338287d4ee88768771193bed7758b6e543390d7cd33dd6618326d5fca3acd9d76aa3a2611f21427d7325d42d0b38
-MISC ChangeLog 10823 SHA256 25ef8d2f61fda1cbee8cd78fa477ba5c239cb683d16e8c51c3ed5e573b73167a SHA512 12d4b423a5acd6e20e166974a6d3ce678a75360bcfe7b41f93e3b0b7eeefcd10d0991dbbdc0901dc7108c5e41e42a29730302c702c6e09cf52e19697bae1b403 WHIRLPOOL d3e42884edb641d57aca1533d2b4502a2a56288bc6f8365d22113a8843e4eac49e14c31d31e17a6b1549e529338110caf71a085ae2e818cf1acda9840886d797
+DIST tlp-gentoo-patches-0.7.tar.xz 2648 SHA256 362f3b7d7c04ef15cde43cc287b0496d318b4af5846c7173ba2978aa659410d1 SHA512 5ae9bdefedf571c5ca03b40b386e522603f516293f1009891a40e0ed80e50c867fe59128fffe0e00c61ad8042dac24ca680019ab93f4da8748a1a74916f34f69 WHIRLPOOL 406f685f922acad92fef76e59852a611d5fe3611abde2e0cee164377005fc5ca18740410a21183c385391212e5e5ba1378e0512e873d7b7fbb043eb29a3dda7d
+EBUILD tlp-0.5-r2.ebuild 5181 SHA256 98c7ea92dd4eb97a83f36f7a7f850db43f5c766c14e83f8247d0f06a376c88c7 SHA512 fe3db0c160e71bc68426ae0c1e58538091492d8e582391761c347437b1e6e8842c01469f0729a326682644bb75d52110c3ee692658e51f6a83a2493492b182c5 WHIRLPOOL dc8b4698684fb47bc5a9e9105cce6bbbd1dc845470e824135e47606aea4692b408ab8da47066f3fe40f72995df1f03169294c341302f29b475125c3ed041c4f9
+EBUILD tlp-0.5.ebuild 4323 SHA256 01d88af7df07d2e4cc5f0cf88cf73807f6fd4261b2a78d220e711ac341ae8b7a SHA512 20acf3f462eab903ba126cb36ae1f58731df8e0be1efc6bf2486a53542cf044bb29e098a743d94ac9cabda68888e8b96a77845c1c886f215b6b60d7e19999341 WHIRLPOOL a21f3de970d61fbadab1900de8aae7e0b379925e142d1834e8634b41974d866de7f04bbbbd46efdef82c5c4dd8e5013d95df52d7338bea16db67172b9e5534ba
+EBUILD tlp-0.6-r1.ebuild 5189 SHA256 bf3dd43bb581179d5b072441c3ec8f2f72d2ca3cc10e3a1ffa68c1daf2d79053 SHA512 8279d364710bec2846cc5141fc952f78a764c819818e5ee175d0649f20653acd02c66319124b34c263ab870a924cc6918df21c0b4ece02a0b9d1167f90caae6e WHIRLPOOL 20cf684227afc89a18774e871e22efe4e357eb6b08ca6c1be5f622cc57c504c05c29f2d2360c571c94dae05ac1721525a6c115e89c39dc949be04b8ac366379c
+EBUILD tlp-0.7.ebuild 5872 SHA256 157e26abfc58b037d68836e9702c294fe9dad21b98c295cdf72f909b489c858c SHA512 9d975372364e870d83c90e7584a3a7af4be680b9ee15d7cf31427fab54df79e47f98c3317fb05e562101f1f3ba4bc28e6facf28fcc28cfd619972d3507cbc046 WHIRLPOOL 5fd78a09f3730ad6d55df5fdef609336140d096062bc4e35b9b7c5357b5d894165aceca006a76e160982c3a217d369d1bb825910ddada044a60de4aeed0cc0c0
+EBUILD tlp-9999.ebuild 6490 SHA256 21c8ac4d26e24da6d7d2dd5ec2bcf375dc1a239220e30802ca26c2c43bf54f57 SHA512 f067bb27ab406621d811171a8c2f07989d5614f46dd4380cb697a9aef75e3ac7a98c0829b9d8bc6bbd2d468e9e4d4eed95fb33ef7cbd9cf114451c8136cc6bc9 WHIRLPOOL cd4854f8dd4084e601b70dff75b104458d95e1feeb35da8cfe6358e81f46ff53418a611cba16ae1677fb17a400ea7bd26a140de5849859e8fe3dd33d7dca5a95
+MISC ChangeLog 11308 SHA256 88763b26bcaa809d86ec06e431b97a9affcccda5d24d433c7cea1c11013c279a SHA512 a410e550e489b538c6a4fd5e0f08ab4b27b15543f07939e853a29c20b39180090de6970830e16a5dda0330a5de8127ac19d7970582058a1623d5f47d56711b92 WHIRLPOOL 2f31bf7ec7f96656081c7b25a902f2e6ae02893c6611b5cfd6ed9cc90a5be61bc5d3ce2a4990a2cb1242189ec1f8258d3236be7527c05c65fd51525001885756
 MISC metadata.xml 2089 SHA256 1e283f1d356f8c38c0f95a16bf3dc7a769834d7a0d9ba9986c327917afc1cfb6 SHA512 e5cd0ca0f6d16c601f83755ac0ef9d509aa454a802c867a4550631130754c719bb1de36ce2f3283ab8bf4ca9177358260d7d7005a15fcaa64a580e681fc7229b WHIRLPOOL 64f5fd3213fa0552d8b5128a06a78e60c04111b50bacbff57dbaa1a92e2a47f51858dc5f6cd6735c5f0be61ab6c10d8c4c9ae7872bc21a4f6e34d14c03edfacc
