@@ -1,0 +1,25 @@
+#!/sbin/runscript
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+description="TLP start/stop actions"
+
+depend() {
+	after modules
+
+	# sysfs is required (bat thresholds); localmount:/usr
+	need sysfs localmount
+
+	# thinkpad-radiosw (USE=deprecated)
+	use acpid
+
+	after NetworkManager dbus bluetooth
+
+	# run after xdm to avoid bluetooth/wwan/... race-condition with gdm
+	after xdm
+}
+
+start()   { /usr/sbin/tlp init start; }
+stop()    { /usr/sbin/tlp init stop; }
+restart() { /usr/sbin/tlp init restart; }
