@@ -9,24 +9,18 @@ inherit eutils bash-completion-r1 linux-info systemd
 DESCRIPTION="Advanced Power Management for Linux"
 HOMEPAGE="http://linrunner.de/tlp"
 
-inherit git-r3
-
-# note that this ebuild builds against 2 live repos
-EGIT_REPO_URI="
-	git://github.com/linrunner/TLP.git
-	https://github.com/linrunner/TLP.git"
-EGIT_BRANCH="devel"
-SRC_URI=""
-KEYWORDS=""
-
-MY_ADDITIONS_REPO_URI="
-	git://github.com/dywisor/tlp-gentoo-additions.git
-	https://github.com/dywisor/tlp-gentoo-additions.git
+SRC_URI="
+	https://github.com/linrunner/TLP/archive/${PV}.tar.gz -> ${P}.tar.gz
+	http://erdmann.es/dywi/dl/tlp/tlp-gentoo-patches-${PV}.tar.xz
 "
-MY_ADDITIONS_REMOTE_REF="refs/heads/master"
+S="${WORKDIR}/${PN^^}-${PV}"
+KEYWORDS="~amd64 ~x86"
 
 MY_README_URI="https://github.com/dywisor/tlp-portage/blob/maint/README.rst"
 MY_CONFFILE="/etc/tlp.conf"
+
+# ebuild in overlay, no point in trying to access mirrored files
+RESTRICT="mirror"
 
 LICENSE="GPL-2+ tpacpi-bundled? ( GPL-3+ )"
 SLOT="0"
@@ -80,29 +74,17 @@ pkg_pretend() {
 
 pkg_setup() { :; }
 
-src_unpack() {
-	# upstream repo fetch/checkout
-	git-r3_src_unpack
-
-	# additions repo for live patching
-	git-r3_fetch \
-		"${MY_ADDITIONS_REPO_URI}" "${MY_ADDITIONS_REMOTE_REF}"
-	git-r3_checkout \
-		"${MY_ADDITIONS_REPO_URI}" "${WORKDIR}/gentoo-additions"
-}
-
 src_prepare() {
-	# * relocate config file to /etc/tlp.conf (upstream: /etc/default/tlp)
-	# * disable TLP by default (-- or enable init scripts in postinst...)
-	# * append TLP_LOAD_MODULES config option
-	# * lspci is in sbin => tlp-pcilist in sbin
-	k="$(TZ=UTC date "+%Y%m%d")"
-	emake -C "${WORKDIR}/gentoo-additions" \
-		TLP_SRC="${S}" TLP_CONF="${MY_CONFFILE}" \
-		TLP_APPENDVER="+git-${EGIT_BRANCH:-live}-${k:-undef}" \
-		livepatch-base \
-		$(usex deprecated     "" "livepatch-no-deprecated") \
-		$(usex tpacpi-bundled "" "livepatch-unbundle-tpacpi-bat")
+	local -a PATCHES=()
+	local PDIR="${WORKDIR}/patches"
+
+	PATCHES+=( "${PDIR}/0001-gentoo-base.patch" )
+
+	use deprecated     || PATCHES+=( "${PDIR}/0002-no-radiosw.patch" )
+	use tpacpi-bundled || \
+		PATCHES+=( "${PDIR}/0003-unbundle-tpacpi-bat.patch" )
+
+	epatch "${PATCHES[@]}"
 
 	cp "${FILESDIR}/${PN}-init.openrc-r1" "${S}/tlp.openrc" || die
 	if ! use deprecated; then
